--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/juannoguera/Downloads/javamail-1.4.4/lib/dsn.jar"/>
+	<classpathentry kind="lib" path="/Users/juannoguera/Downloads/javamail-1.4.4/lib/imap.jar"/>
+	<classpathentry kind="lib" path="/Users/juannoguera/Downloads/javamail-1.4.4/lib/pop3.jar"/>
+	<classpathentry kind="lib" path="/Users/juannoguera/Downloads/javamail-1.4.4/lib/smtp.jar"/>
+	<classpathentry kind="lib" path="/Users/juannoguera/Downloads/javamail-1.4.4/lib/mailapi.jar"/>
+	<classpathentry kind="lib" path="/Users/juannoguera/Downloads/javamail-1.4.4/mail.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
